--- a/Resume.html
+++ b/Resume.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Dwayne Loffreda</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 <link rel="stylesheet" href="style.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,7 +22,7 @@
             <div class="navbar-nav">
               <a class="nav-link " href="./index.html">Home</a>
               <a class="nav-link active " aria-current="page" href="Resume.html">Resume</a>
-              <a class="nav-link active" href="./ContactMe.html">Contact Me</a>
+              <a class="nav-link " href="./ContactMe.html">Contact Me</a>
             </div>
           </div>
         </div>
